# faction-backend

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.worker  README.md  SETUP.md  alembic.ini  check_db_connections.py  clear_data.py  delete_all_users.py  docker-compose.yml  example_data_migration.py  import_questions.py  monitor_connections.py  pyproject.toml  questions_combined.json  render.yaml  requirements-dev.txt  requirements.txt  seed_video.py  start.sh
alembic/: env.py
alembic/versions/: 0d13a7dacaa4_initial_migration_create_all_tables.py  0fca6566851e_add_exam_type_to_subject.py  13d234b6fc26_minor_fix_in_base_question_schema.py  23cf9484a9ae_add_isscholarship_to_contest.py  2530388b5d58_contest_leaderboard_combined_with_.py  29a83ad0ece9_notes_schema_added.py  2d8c54a7f00b_add_instructor_fields_to_youtube_videos.py  31819dc06595_initial_database_migration.py  32991d02a8a5_user_schema_changed_a_bit.py  36cda8b7ee71_badge_schema_updated.py  3731219cfe79_minor_fix_in_schema.py  4762d8b7e524_qotd_schema_added.py  51d5c6604dd0_minor_fix_in_pyq_schema.py  (+30 more)
app/: __init__.py  main.py
k6_tests/: .gitignore  README.md  run_tests.sh
load_test/: README_WRK2.md  WRK2_OUTPUT_EXPLANATION.md  locu.py  locust.py  login_test.lua  login_test_simple.lua  run_login_test.sh  run_users_me_test.sh  users_me_test.lua
seed/: SCHEMA.md  YOUTUBE_VIDEOS_IMPORT.md  example_data.json  seed.py
tests/: conftest.py  test_auth.py  test_questions.py
workers/: QUICKSTART.md  README.md  __init__.py  contest_worker.py  entry_point.py  grading_worker.py  run_workers.sh
(+171 files in other folders)
